--- a/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
+++ b/src/app/component/producto/producto.admin.edit.routed/producto.admin.edit.routed.component.html
@@ -142,6 +142,41 @@
                 </div>
               </div>
               <div class="col-md-4 mb-3">
+                <label class="form-label">Largo Unidad</label>
+                <input type="number" formControlName="largo_unidad" class="form-control" [ngClass]="{'is-invalid': isFieldInvalid('largo_unidad')}" />
+                <div class="invalid-feedback">
+                  <i class="bi bi-exclamation-circle"></i> Solo números enteros
+                </div>
+              </div>
+              <div class="col-md-4 mb-3">
+                <label class="form-label">Ancho Unidad</label>
+                <input type="number" formControlName="ancho_unidad" class="form-control" [ngClass]="{'is-invalid': isFieldInvalid('ancho_unidad')}" />
+                <div class="invalid-feedback">
+                  <i class="bi bi-exclamation-circle"></i> Solo números enteros
+                </div>
+              </div>
+              <div class="col-md-4 mb-3">
+                <label class="form-label">Alto Unidad</label>
+                <input type="number" formControlName="alto_unidad" class="form-control" [ngClass]="{'is-invalid': isFieldInvalid('alto_unidad')}" />
+                <div class="invalid-feedback">
+                  <i class="bi bi-exclamation-circle"></i> Solo números enteros
+                </div>
+              </div>
+              <div class="col-md-4 mb-3">
+                <label class="form-label">Peso Neto Unidad</label>
+                <input type="number" formControlName="peso_neto_unidad" class="form-control" [ngClass]="{'is-invalid': isFieldInvalid('peso_neto_unidad')}" />
+                <div class="invalid-feedback">
+                  <i class="bi bi-exclamation-circle"></i> Valor decimal válido
+                </div>
+              </div>
+              <div class="col-md-4 mb-3">
+                <label class="form-label">Peso Escurrido Unidad</label>
+                <input type="number" formControlName="peso_escurrido_unidad" class="form-control" [ngClass]="{'is-invalid': isFieldInvalid('peso_escurrido_unidad')}" />
+                <div class="invalid-feedback">
+                  <i class="bi bi-exclamation-circle"></i> Valor decimal válido
+                </div>
+              </div>
+              <div class="col-md-4 mb-3">
                 <label class="form-label">Cajas por Capa</label>
                 <input type="number" formControlName="cajasCapa" class="form-control" [ngClass]="{'is-invalid': isFieldInvalid('cajasCapa')}" />
                 <div class="invalid-feedback">
